# Discord-Music-Core

./: README.md  pyproject.toml
discord_music_core/: __init__.py  musicbot.py  test.py
