[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-music-core"
version = "0.1.0"
description = "Music bot helper module for Discord bots"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "discord.py", "yt_dlp",
]

[tool.setuptools.packages.find]
where = ["."]
