[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-music-core"
version = "0.1.0"
description = "Music bot helper module for Discord bots"
authors = [{ name = "David Whittam", email = "david.m.whittam@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "discord.py", "yt_dlp",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["discord_music_core.test"]